# mtg-api

./: Dockerfile  ReadMe.md  pyproject.toml
app/: config.py  database.py  main.py
app/routes/: auth_routes.py  card_routes.py
app/schemas/: card_schema.py
app/security/: api_key_generator.py  auth.py
app/services/: card_service.py
